fix: align items to center so it looks better

--- a/week1/Table-Excersise/style.css
+++ b/week1/Table-Excersise/style.css
@@ -1,3 +1,7 @@
+body{
+    max-width: 820px;
+    margin: auto;
+}
 .main-table{
     width: 100%;
     border: 1px solid black;
